<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chololate">Chololate</string>
    <string name="quantity">Quantity</string>
    <string name="order">ORDER</string>

    <string name="order_summary_name">Name: <xliff:g id="name" example="Waydrow">%s</xliff:g></string>
</resources>
